<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFont"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/Isotipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="110dp"
            android:contentDescription="@string/ImgIsotipo"
            app:srcCompat="@drawable/isotipo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:contentDescription="@string/LabelIniciarSesion"
            android:text="Iniciar Sesión"
            android:fontFamily="@font/poppins_light"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/correo_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/LabelCorreo"
            android:inputType="textPersonName"
            android:textColor="@color/colorInputFont"
            android:textColorHint="@color/gray600"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/contrasena_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="Contraseña"
            android:inputType="textPersonName"
            android:textColor="@color/colorInputFont"
            android:textColorHint="@color/gray600"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="160dp">

            <Button
                android:id="@+id/buttonIniciar"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:contentDescription="@string/LabelIngresar"
                android:fontFamily="@font/quicksand_medium"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorPrimary"
                android:text="Ingresar" />

            <Button
                android:id="@+id/Button_crearcuenta"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:contentDescription="@string/LabelCrearCuenta"
                android:fontFamily="@font/quicksand_medium"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorPrimary"
                android:text="CREAR CUENTA" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>