<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFont"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="513dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:contentDescription="@string/LabelIniciarSesion"
            android:fontFamily="@font/poppins_light"
            android:text="Crea tu cuenta"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_light"
            android:text="Información de la cuenta"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/correo_registro"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/LabelCorreo"
            android:inputType="textPersonName"
            android:text="Correo institucional"
            android:textColor="@color/colorInputFont"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/contrasena_registro"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/LabelContraseña"
            android:inputType="textPersonName"
            android:text="Crear contraseña"
            android:textColor="@color/colorInputFont"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_registro"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/LabelCrearCuenta"
            android:fontFamily="@font/quicksand_medium"
            android:hint="Registro_cuenta"
            android:text="CREAR CUENTA"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>